--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DB_NAME='award'
 DB_USER='austin'
 DB_PASSWORD='1234'
 DB_HOST='127.0.0.1'
-MODE='dev'
+MODE='prod'
 ALLOWED_HOSTS=['*']
 DISABLE_COLLECTSTATIC=1
